...
    onNewValue: (String) -> Unit,
    modifier: Modifier = Modifier,
    errorMessage: String = ""
) {
    OutlinedTextField(
        singleLine = true,
        modifier = modifier.then(Modifier.testTag("emailField")),
        value = value,
        isError = errorMessage.isNotEmpty(),
        supportingText = {
            if (errorMessage.isNotEmpty()) Text(
                errorMessage,
                modifier.then(Modifier.testTag("emailErrorField"))
...
    errorMessage: String = ""
) {
    PasswordField(
        value,
        "Password",
        onNewValue,
        modifier.then(Modifier.testTag("passwordField")),
        errorMessage,
        Modifier.testTag("passwordErrorField")
    )
}

@Composable
...
