...
        if (uiState.error != null) Text(text = uiState.error!!, color = Color.Red)

        PrimaryButton(
            text = "Login",
            modifier = Modifier
                .basicButton()
                .then(Modifier.testTag("loginButton"))
        ) {
            viewModel.onLogInClick(openAndPopUp = { route, popUp ->
                mainState.navigateAndPopUp(
                    route,
                    popUp
                )
...
